# task-tracker

./: .dockerignore  .env.example  .gitignore  README.md  RUNBOOK.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0b17ff20bbaa_add_task_priority_and_due_at.py  3807918a6db1_initial_tables.py
app/: db.py  deps.py  main.py  models.py  schemas.py  security.py
app/repositories/: task_repo.py  user_repo.py
app/routers/: assistant.py  auth.py  internal.py  tasks.py
app/services/: task_service.py
static/: index.html
tests/: test_health.py  test_task_repo.py  test_tasks_api.py
